<resources>
    <string name="app_name">Курьер офис</string>
    <string name="greeting">Введите пин-код</string>

    <!-- Strings related to AlertDialog -->
    <string name="ok">ОК</string>
    <string name="cancel">Отмена</string>
    <string name="error">Ошибка</string>
    <string name="warning">Внимание</string>
    <string name="please_wait">Пожалуйста, подождите...</string>
    <string name="please_wait_while_prepare_image">Пожалуйста, подождите, подготавливаю изображение</string>
    <string name="please_wait_while_process_brightness">Пожалуйста, подождите, проверяю яркость изображения</string>
    <string name="please_wait_while_process_blur">Пожалуйста, подождите, проверяю качество изображения</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Настройки</string>

    <!-- Strings related to login -->
    <string name="prompt_phone">Телефон</string>
    <string name="prompt_code">СМС код</string>
    <string name="prompt_password">Пароль</string>
    <string name="sign_button">Войти</string>
    <string name="next">Далее</string>
    <string name="confirm">Подтвердить</string>
    <string name="pinLost"><u>Я забыл пин-код</u></string>

    <!-- Strings related to menu -->
    <string name="nav_home">Главная</string>
    <string name="nav_scan">Сканировать QR-код</string>
    <string name="nav_apps">Заявки</string>
    <string name="nav_notes">Сообщения</string>
    <string name="nav_help">Справка</string>
    <string name="nav_about">О компании</string>
    <string name="nav_mail">Обратная связь</string>
    <string name="nav_service">Служебные</string>
    <string name="nav_data">База данных</string>
    <string name="nav_location">Местоположение</string>

    <!-- Strings related to hardware and network-->
    <string name="camera_not_available">Камера недоступна</string>
    <string name="something_went_wrong">Что-то пошло не так...</string>
    <string name="connection_failed">Ошибка подключения</string>
    <string name="connection_not_available">Не удалось подключиться к серверу. Проверьте подключение к интернету.</string>
    <string name="document_has_no_scans">Документ не содержит ни одного скана. Вы желаете сейчас сделать скан документа?</string>
    <string name="some_document_has_no_scan">Отправка невозможна. Один из документов заявки не содержит ни одного скана</string>
    <string name="application_in_progress">Заявка обрабатывается</string>

    <!-- Strings related to fragments -->
    <string name="welcome">Это главная страница. Здесь предполагается отображать новости и другие служебные сообщения</string>

    <!-- titles -->
    <string name="title_home_fragment">Сообщения</string>
    <string name="title_qrcode_fragment">Сканировать QR-код</string>
    <string name="title_applist_fragment">Заявки</string>
    <string name="title_help_fragment">Справка</string>
    <string name="title_activity_login">7 seconds</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_pinlock">PinlockActivity</string>

    <!-- Intro -->
    <string name="login">Вход</string>
    <string name="register">Регистрация</string>
    <string name="title_slide1">Кредит онлайн</string>
    <string name="desc_slide1">Без визита в банк, нужен только паспорт</string>
    <string name="title_slide2">Заявка на кредит</string>
    <string name="desc_slide2">Укажите сумму кредита</string>
    <string name="title_slide3">Одобрение банка</string>
    <string name="desc_slide3">Банк примет решение в течение 10 минут</string>

    <!-- Strings related to app menu -->
    <string name="menu_scan">Сканировать</string>
    <string name="menu_send">Отправить</string>
    <string name="menu_delete">Удалить</string>
    <string name="call_operator">Позвонить оператору</string>
    <string name="reject_button_text">Отказ получателя</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="scan_menu_show">Посмотреть</string>
    <string name="scan_menu_reshoot">Переснять</string>

    <!-- Strings related to help menu -->
    <string name="help_title">Инструкция по работе</string>
    <string name="help_scan_subtitle">Сканирование</string>
    <string name="help_scan_text1">1. Перед началом работы убедитесь, что телефон подключен к сети «Интернет».</string>
    <string name="help_scan_text2">2. Подготовьте кредитную заявку с QR кодом.</string>
    <string name="help_scan_text3">3. Запустите приложение, выберите пункт меню «Сканировать» и сканируйте QR код заявки.</string>
    <string name="help_scan_text4">4. Вам будет предложено отсканировать копии документов. Вы можете также сделать это позже.</string>
    <string name="help_scan_text5">Сканирование</string>

    <!-- Strings related to about menu -->
    <string name="about_title">7 seconds</string>
    <string name="about_subtitle">О компании</string>
    <string name="about_text1">Компания 7 seconds помогает получать потребительские кредиты через своих финансовых партнеров.</string>
    <string name="about_text2">Мы стараемся сделать процесс получения кредита максимально быстрым и простым. Наши клиенты получают самые выгодные, честные и понятные условия на финансовые продукты для осуществления покупок.</string>
    <string name="about_text3">Мы работаем только с лучшими, уже зарекомендовавшими себя финансовыми партнерами. Мы стараемся максимально снизить сроки рассмотрения заявки для рассрочки: с нами эта процедура занимает всего несколько минут.</string>
</resources>
